--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- meta tag -->
     <meta charset="utf-8" />
     <title>
-      Home-Oses Constulant & Engineering Services
+      Home-Oses Consultant & Engineering Services
     </title>
     <meta name="description" content="" />
     <!-- responsive tag -->
@@ -68,7 +68,7 @@
           <div class="loader-icon">
             <img
               src="images/fav.png"
-              alt="Oses Constulant & Engineering Services "
+              alt="Oses Consultant & Engineering Services "
             />
           </div>
         </div>
@@ -510,8 +510,8 @@
                   <div class="info-content">
                     <h4 class="title">Email</h4>
                     <em
-                      ><a href="mailto:info@osesconsultantengineeringservicesltd.com.ng"
-                        >info@osesconsultantengineering<br>servicesltd.com.ng</a
+                      ><a href="mailto:info@osesconsults.com.ng"
+                        >info@osesconsults.com.ng</a
                       ></em
                     >
                   </div>
@@ -622,7 +622,7 @@
                     <a href="services-style1.html">Quality Services</a>
                   </h3>
                   <p class="services-txt">
-                    At Oses consultant & engineering services, qulity service is the bedrock upon which trust, reputation, and client satisfaction are built.
+                    At Oses consultant & engineering services, quality service is the bedrock upon which trust, reputation, and client satisfaction are built.
                   </p>
                 </div>
               </div>
@@ -756,7 +756,7 @@
                     <a href="services-style1.html">Environment impact assessment</a>
                   </h2>
                   <p class="services-txt">
-                   We give practical and effective advice, impact assesments and reports on key environmental issues from license application, planning and development through operations and decommissioning.
+                   We give practical and effective advice, impact assessments and reports on key environmental issues from license application, planning and development through operations and decommissioning.
                   </p>
                 </div>
               </div>
@@ -794,7 +794,7 @@
                     >
                   </h2>
                   <p class="services-txt">
-                    We develop a produce from its inception to final assembly, testing and devlivery.
+                    We develop a produce from its inception to final assembly, testing and delivery.
                   </p>
                 </div>
               </div>
@@ -2169,10 +2169,10 @@
                 <li>
                   <i class="fi fi-rr-envelope-plus"></i>
                   <div class="desc">
-                    <!-- <a href="mailto:support@devsdesign.com"
-                      >info@osesconsultant&engineeringservicesltd.com.ng</a
+                    <!-- <a href="mailto:osesconsults.com.ng"
+                      >info@osesconsults.com.ng</a
                     ><br /> -->
-                    <a href="mailto:info@osesconsultantengineeringservicesltd.com.ng">info@osesconsultantengineering<br>servicesltd.com.ng </a>
+                    <a href="mailto:info@osesconsults.com.ng">osesconsults.com.ng </a>
                   </div>
                 </li>
               </ul>
@@ -2186,7 +2186,7 @@
                 <li>
                   <a href="services-style1.html">Property Maintenance</a>
                 </li>
-                <li><a href="services-style1.html">Project Managment</a></li>
+                <li><a href="services-style1.html">Project Management</a></li>
                 <li>
                   <a href="services-style1.html">Virtual Design & Build</a>
                 </li>
@@ -2242,7 +2242,7 @@
             <div class="col-lg-6">
               <div class="copyright text-lg-start text-center">
                 <p>
-                  © 2023 Oses consultant & engineering services. design By 
+                  © 2026 Oses consultant & engineering services. design By 
                   <a href="https://www.zyantechnology.com.ng" target="blank"
                     >Zayn Technology</a
                   >
